; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libvorbisenc.c_vorbis_error_to_averror.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libvorbisenc.c_vorbis_error_to_averror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_BUG = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@AVERROR_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @vorbis_error_to_averror to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vorbis_error_to_averror(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 130, label %5
    i32 128, label %7
    i32 129, label %10
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @AVERROR_BUG, align 4
  store i32 %6, i32* %2, align 4
  br label %15

7:                                                ; preds = %1
  %8 = load i32, i32* @EINVAL, align 4
  %9 = call i32 @AVERROR(i32 %8)
  store i32 %9, i32* %2, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* @EINVAL, align 4
  %12 = call i32 @AVERROR(i32 %11)
  store i32 %12, i32* %2, align 4
  br label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @AVERROR_UNKNOWN, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %13, %10, %7, %5
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
